--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,8 @@ spring.http.multipart.max-request-size=10MB
 
 spring.http.multipart.enabled=true
 
+jwt.auth.app=Spring-Security-App
+jwt.auth.secret_key=testkey#secret@12334
+jwt.auth.expires_in=3600
+
 
